--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,9 @@
             "ts": "never"
           }
         ],
-        "prettier/prettier": "error"
+        "class-methods-use-this": "off",
+        "prettier/prettier": "error",
+        "no-useless-constructor": "off"
     },
     "settings": {
         "import/resolver": {
