--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,12 @@
         "@typescript-eslint/no-use-before-define": [
             "error"
         ],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+              "argsIgnorePattern": "_"
+            }
+          ],
         "import/extensions": [
           "error",
           "ignorePackages",
