--- a/.env.exemple
+++ b/.env.exemple
@@ -1,13 +1,15 @@
+#App
 APP_NAME=StudyIo
+APP_PORT=3333
 
 # Environmnet
 NODE_ENV=dev
 
-APP_SECRET=
+APP_SECRET=645b78914c03859cb0aac0ec8fa3bd0b
 
 # Postgres
 POSTGRESQL_HOST=localhost
-POSTGRESQL_PASSWORD=
-POSTGRESQL_DATABASE=
-POSTGRESQL_PORT=
-POSTGRESQL_USERNAME=
+POSTGRESQL_PASSWORD=1234
+POSTGRESQL_DATABASE=postgres
+POSTGRESQL_PORT=5432
+POSTGRESQL_USERNAME=postgres
