--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "husky": {
+	"hooks": {
+		"pre-commit": "lint-staged"
+	}
+  },
+  "lint-staged": {
+    "*.ts": [
+        "eslint --fix",
+		"cross-env CI=true yarn test --bail --findRelatedTests",
+		"git add"
+	]
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.0",
@@ -42,7 +54,9 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "4.3.8",
     "jest": "^27.2.4",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
