--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
         "prettier"
     ],
     "rules": {
+        "no-useless-constructor": "off",
+        "@typescript-eslint/no-useless-constructor": ["error"],
+        "import/prefer-default-export": "off",
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": [
             "error"
