--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     ],
     "rules": {
         "no-useless-constructor": "off",
+        "import/no-unresolved": "off",
         "@typescript-eslint/no-useless-constructor": ["error"],
         "import/prefer-default-export": "off",
         "no-use-before-define": "off",
