--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "lint-staged": {
     "*.ts": [
       "eslint --fix",
+      "cross-env CI=true yarn test --bail --findRelatedTests",
       "git add"
     ]
   },
@@ -48,6 +49,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^16.11.6",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
