feat(rate limiter and sentryio): add rate limiter and sentryio

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ POSTGRESQL_PASSWORD=
 POSTGRESQL_DATABASE=
 POSTGRESQL_PORT=
 POSTGRESQL_USERNAME=
+
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=
+REDIS_PASSWORD=
+
+#Sentry
+SENTRY_DSN=
