--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,13 @@ services:
       - pgdata:/data/postgres
     ports:
       - ${POSTGRESQL_PORT}:5432
+
+ redis:
+  image: redis:alpine
+  ports:
+   - 6379:6379
+
+
  app:
   build: .
   container_name: studyio
