--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,16 @@ jobs:
           KEY: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
           target: "~/app/studyio-api"
+          
+      - name: Update API
+        uses: appleboy/ssh-action@master
+        with:
+         host: ${{ secrets.SSH_HOST }}
+         username: ${{ secrets.SSH_USER }}
+         port: ${{ secrets.SSH_PORT }}
+         KEY: ${{ secrets.SSH_KEY }}
+         script: |
+            cd ~/app/studyio-api
+            yarn
+            ./node_modules/.bin/typeorm migration:run
+            pm2 restart studyio
