--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,19 @@
 #App
 APP_NAME=StudyIo
-APP_PORT=
-
-# Environmnet
-NODE_ENV=prod
-
-APP_SECRET=
+APP_PORT=3333
+APP_SECRET=das56d4a6d8a4d6w16ad68
 
 # Postgres
-POSTGRESQL_HOST=
+POSTGRESQL_HOST=localhost
 POSTGRESQL_PASSWORD=
 POSTGRESQL_DATABASE=
 POSTGRESQL_PORT=
 POSTGRESQL_USERNAME=
 
 #Redis
-REDIS_HOST=localhost
-REDIS_PORT=
+REDIS_HOST=redis
+REDIS_PORT=6379
 REDIS_PASSWORD=
 
 #Sentry
-SENTRY_DSN=
+SENTRY_DSN=https://89715f69ce28434f9003ea0a80fded9b@o1070802.ingest.sentry.io/6067155
