--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: "3.7"
 services:
  database:
     image: postgres:13.2-alpine
-    container_name: postgres
     restart: always
     environment:
      POSTGRES_USER: ${POSTGRESQL_USERNAME}
@@ -17,21 +16,7 @@ services:
  redis:
   image: redis:alpine
   ports:
-   - 6379:6379
-
-
- app:
-  build: .
-  container_name: studyio
-  restart: always
-  ports:
-   - ${APP_PORT}:${APP_PORT}
-  volumes:
-   - .:/usr/app
-  links:
-   - database
-  depends_on:
-   - database
+   - ${REDIS_PORT}:${REDIS_PORT}
 
 volumes:
  pgdata:
