--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 APP_NAME=StudyIo
 APP_PORT=3333
 APP_SECRET=das56d4a6d8a4d6w16ad68
+WEB_URL=http://localhost:3000
 
 # Postgres
 POSTGRESQL_HOST=localhost
